Fix Firefox scrollbar compatibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* Styled Scrollbar */
+/* Styled Scrollbar Starts */
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
@@ -23,7 +23,16 @@
   );
 }
 
-/* Styled Scrollbar */
+/* Fix Firefox styled scrollbar compatibility  */
+
+@supports (scrollbar-color: #36dee4 #f5f5f5) {
+  * {
+    scrollbar-color: #36dee4 #f5f5f5;
+    scrollbar-width: thin;
+  }
+}
+
+/* Styled Scrollbar Ends*/
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
